[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SearchBar/SearchBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/IngredientFinder.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Add.gd" type="Script" id=3]

[node name="IngredientFinder" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Search" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBar" parent="Search" instance=ExtResource( 1 )]
margin_right = 1584.0
rect_min_size = Vector2( 0, 32 )

[node name="AddIng" type="Button" parent="Search"]
margin_top = 36.0
margin_right = 1584.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
text = "Add Ingredient"

[node name="ScrollContainer" type="ScrollContainer" parent="Search"]
margin_top = 72.0
margin_right = 1584.0
margin_bottom = 824.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ings" type="VBoxContainer" parent="Search/ScrollContainer"]
margin_right = 1584.0
margin_bottom = 752.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Add" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="Add"]
margin_right = 1584.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Add/Name"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 19.0
text = "Ingredient Name:"

[node name="Title" type="LineEdit" parent="Add/Name"]
margin_left = 116.0
margin_right = 1584.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Add"]
margin_top = 28.0
margin_right = 1584.0
margin_bottom = 42.0
text = "Nutritional Information per 100 Grams"
align = 1
valign = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="Add"]
margin_top = 46.0
margin_right = 1584.0
margin_bottom = 788.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="VBoxContainer" parent="Add/ScrollContainer"]
margin_left = 725.0
margin_top = 289.0
margin_right = 858.0
margin_bottom = 453.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_right = 133.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Calories:"

[node name="Calories" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 133.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_top = 28.0
margin_right = 133.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Carbs:"

[node name="Carbs" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer2"]
margin_left = 43.0
margin_right = 117.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001
suffix = "g"

[node name="HBoxContainer3" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_top = 56.0
margin_right = 133.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "Protein:"

[node name="Proteins" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 128.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001
suffix = "g"

[node name="HBoxContainer4" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_top = 84.0
margin_right = 133.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 23.0
margin_bottom = 19.0
text = "Fat:"

[node name="Fats" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer4"]
margin_left = 27.0
margin_right = 101.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001
suffix = "g"

[node name="HBoxContainer5" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_top = 112.0
margin_right = 133.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "Fiber:"

[node name="Fiber" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer5"]
margin_left = 40.0
margin_right = 114.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001
suffix = "g"

[node name="HBoxContainer6" type="HBoxContainer" parent="Add/ScrollContainer/GridContainer"]
margin_top = 140.0
margin_right = 133.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Add/ScrollContainer/GridContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Sugar:"

[node name="Sugar" type="SpinBox" parent="Add/ScrollContainer/GridContainer/HBoxContainer6"]
margin_left = 42.0
margin_right = 116.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.001
suffix = "g"

[node name="HBoxContainer" type="HBoxContainer" parent="Add"]
margin_top = 792.0
margin_right = 1584.0
margin_bottom = 824.0
rect_min_size = Vector2( 0, 32 )
alignment = 2

[node name="Cancel" type="Button" parent="Add/HBoxContainer"]
margin_left = 1380.0
margin_right = 1480.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
text = "Cancel"

[node name="Save" type="Button" parent="Add/HBoxContainer"]
margin_left = 1484.0
margin_right = 1584.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
text = "Save"

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="search" from="Search/SearchBar" to="." method="_on_SearchBar_search"]
[connection signal="pressed" from="Search/AddIng" to="." method="_on_AddIng_pressed"]
[connection signal="ingredient_saved" from="Add" to="." method="_on_Add_ingredient_saved"]
[connection signal="pressed" from="Add/HBoxContainer/Cancel" to="." method="_on_Add_Cancel_pressed"]
[connection signal="pressed" from="Add/HBoxContainer/Save" to="Add" method="_on_Save_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
